tests/typing/bad/testfile-type-undefined-2.jl
function f(x::yo) end
